--- a/app/index.html
+++ b/app/index.html
@@ -12,7 +12,6 @@
     <link rel="stylesheet" type="text/css" href="styles/collection.css">
     <link rel="stylesheet" type="text/css" href="styles/album.css">
     <link rel="stylesheet" type="text/css" href="styles/player_bar.css">
-    <link rel="stylesheet" href="/styles/main.css">
 </head>
 <body>
     <nav class="navbar"> <!-- navigation bar -->
@@ -23,7 +22,11 @@
             <a href="collection.html" class="navbar-link">collection</a>
         </div>
     </nav>
+    
+    <ui-view></ui-view>
+    
     <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.6.3/angular.min.js"></script>
-    <script src="/scripts/app.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/angular-ui-router/0.4.2/angular-ui-router.min.js"></script>
+    <script src="scripts/app.js"></script>
 </body>
 </html>
