--- a/app/index.html
+++ b/app/index.html
@@ -20,6 +20,7 @@
         </a>
         <div class="links-container">
             <a ui-sref="collection" class="navbar-link">collection</a>
+            <a ui-sref="profile" class="navbar-link">profile</a>
         </div>
     </nav>
     
@@ -38,5 +39,6 @@
     <script src="scripts/controllers/PlayerBarCtrl.js"></script>
     <script src="scripts/directives/seekBar.js"></script>
     <script src="scripts/filters/timecode.js"></script>
+    <script src="scripts/controllers/ProfileCtrl.js"></script>
 </body>
 </html>
